-changes to header

--- a/Views/SaRelease/Index.cshtml
+++ b/Views/SaRelease/Index.cshtml
@@ -10,41 +10,33 @@
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
 <div class="container-flow">
-    <div class="row p-1">
+    <div class="row">
         <div class="col-lg-2">
             <label style="font-size:8px;" for="date">Transaction Date:</label>
             <input style="font-size:10px;" type="date" id="date" name="date">
         </div>
-        <div class="col-lg-1"></div>
         <div class="col-lg-2 form-group">
               <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
         </div>
-  
-    </div>
-    <div class="row p-1">
-        <div class="col-lg-3 form-group">
+        <div class="col-lg-2 form-group">
             <input style="font-size:10px;" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
          </div>
-        <div class="col-lg-3 form-group">
+         <div class="col-lg-2 form-group">
             <input style="font-size:10px;" type="text" class="form-control" placeholder="Port of Entry:" aria-label="Port of Entry:" aria-describedby="basic-addon2" id="portEntry"/>
         </div>
-        
-
+  
     </div>
-    <div class="row p-1">
-        <div class="col-lg-3 form-group">
-            <input style="font-size:10px;" type="text" class="form-control" placeholder="Prev Trans #:" aria-label="Prev Trans #:" aria-describedby="basic-addon2" id="prevTransNo"/>
-        </div>
-        <div class="col-lg-3 form-group">
-            <input style="font-size:10px;" type="text" class="form-control" placeholder="Trans #:" aria-label="Trans #:" aria-describedby="basic-addon2" id="transNumber"/>
-        </div>
-
-    </div>
-    <div class="row p-1">
-        <div class="col-lg-6 form-group">
+    <div class="row">
+        <div class="col-lg-4 form-group">
             <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
         </div>
-        <div class="col-lg-3"></div>
+        <div class="col-lg-2 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="Prev Trans #:" aria-label="Prev Trans #:" aria-describedby="basic-addon2" id="prevTransNo"/>
+        </div>
+        <div class="col-lg-2 form-group">
+            <input style="font-size:10px;" type="text" class="form-control" placeholder="Trans #:" aria-label="Trans #:" aria-describedby="basic-addon2" id="transNumber"/>
+        </div>
+        <div class="col-lg-1"></div>
         <div class="col-lg-2 form-group">
             <input style="font-size:10px;" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
         </div>
