--- a/Views/SaStockReceived/Index.cshtml
+++ b/Views/SaStockReceived/Index.cshtml
@@ -10,47 +10,37 @@
  </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
     <div class="container-flow">
-        <div class="row p-1">
+        <div class="row">
           <div class="col-lg-2">
                 <label style="font-size:8px;" for="date">Transaction Date:</label>
                 <input style="font-size:10px;" type="date" id="date" name="date">
-          </div>
-            <div class="col-lg-1"></div>
-          <div class="col-lg-2 form-group p-lg-0">
-                  <select style="font-size:10px;" class="form-control" id="truckingCompanyDropdown" name="truckingCompanyDropdown"></select>
-          </div>
-                   
+          </div>          
         </div>
-
-
-        <div class="row p-1">
-            <div class="col-lg-2 form-group">
+        <div class="row">
+          <div class="col-lg-2 form-group">
+               <select style="font-size:10px;" class="form-control" id="truckingCompanyDropdown" name="truckingCompanyDropdown"></select>
+          </div>
+          <div class="col-lg-2 form-group">
+                <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
+          </div>
+        <div class="col-lg-2 form-group">
                 <select style="font-size:10px;" class="form-control" id="supplierDropdown" name="supplierDropdown"></select> 
-            </div>
-                <div class="col-lg-1"></div>
-            <div class="col-lg-2 p-lg-0">
-              <input style="font-size:10px;" type="text" class="form-control" placeholder="Seal No:" aria-label="Seal No:" aria-describedby="basic-addon2" id="sealNo"/>
-            </div>
-                <div class="col-lg-1"></div>
-            <div class="col-lg-2 p-lg-0">
+         </div> 
+         <div class="col-lg-2">
                    <input style="font-size:10px;" type="text" class="form-control" placeholder="Trucker/Probill Number:" aria-label="Trucker/Probill Number:" aria-describedby="basic-addon2" id="truckerProbillNumber"/>
             </div>
         </div>
-
-
-        <div class="row p-1">
-             <div class="col-lg-2 form-group">
-                <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
-             </div>
-                 <div class="col-lg-1 p-lg-0"></div>
-             <div class="col-lg-2 p-lg-0">
-                <input style="font-size:10px;" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
-             </div>
-                 <div class="col-lg-1  p-lg-0"></div>
-             <div class="col-lg-2  p-lg-0">
+        <div class="row">
+            <div class="col-lg-4">
                  <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
              </div>
-                <div class="col-lg-1  p-lg-0"></div>
+             <div class="col-lg-2">
+                <input style="font-size:10px;" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
+             </div>
+              <div class="col-lg-2 ">
+              <input style="font-size:10px;" type="text" class="form-control" placeholder="Seal No:" aria-label="Seal No:" aria-describedby="basic-addon2" id="sealNo"/>
+         </div>
+                <div class="col-lg-1"></div>
              <div class="col-lg-2">
                  <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
              </div>
