--- a/Views/Inventory/Index.cshtml
+++ b/Views/Inventory/Index.cshtml
@@ -47,40 +47,30 @@
                       },
                autowidth:true,
                colModel: [
-                   {
-                        label: "Edit Actions",
-                        name: "actions",
-                        width: 100,
-                        fixed:true,
-                        formatter: "actions",
-                        formatoptions: {
-                            keys: true,
-                            editOptions: { },
-                            addOptions: { },
-                            delOptions: { url: 'Inventory/Delete' }
-                        }
-                    },
-                   { label: ' Product Sku',name: 'sku',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 50}, editrules: { required: true }},
+                   //{
+                   //     label: "Edit Actions",
+                   //     name: "actions",
+                   //     width: 100,
+                   //     fixed:true,
+                   //     formatter: "actions",
+                   //     formatoptions: {
+                   //         keys: true,
+                   //         editOptions: { },
+                   //         addOptions: { },
+                   //         delOptions: { url: 'Inventory/Delete' }
+                   //     }
+                   // },
+                   { label: 'Product Id',name: 'productSku',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 50}, editrules: { required: true }},
 
-			       { label: 'Product Name',name: 'description',fixed:true,width:150, editable: true, edittype:"text", editoptions: { maxlength: 150}, editrules: { required: true }},
+			       { label: 'Product Name',name: 'productName',fixed:true,width:150, editable: true, edittype:"text", editoptions: { maxlength: 150}, editrules: { required: true }},
 
- 			       { label: 'Product Id',name: 'productId',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Supplier',name: 'supplier',fixed:true,width:125, editable: true, edittype:"select",formatter: 'select', editoptions: {value: getSupplierNames()}},
 
-                   { label: 'Supplier',name: 'supplierId',fixed:true,width:125, editable: true, edittype:"select",formatter: 'select', editoptions: {value: getSupplierNames()}},
+                   { label: 'Location', name: 'invLocationName',fixed:true,width:125, editable: true, edittype:"text",editoptions: {maxlength: 15}, editrules: { required: true } },
 
-                   { label: 'Single Weight',name: 'singleWeight',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength:15},editrules: { required: true }},
+                   { label: 'Inventory Qty',name: 'invCount',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength:15},editrules: { required: true }},
 
-                   { label: 'Containe Weight', name: 'containerWeight',fixed:true,width:125, editable: true, edittype:"text",editoptions: {maxlength: 15}, editrules: { required: true } },
-
-                   { label: 'Case Weight', name: 'caseWeight',fixed:true,width:100, editable: true, edittype:"text",editoptions: {maxlength: 100},editrules: { required: true } },
-
-                   { label: 'Pack Size', name: 'packSize',fixed:true,width:100, editable: true, edittype:"text",editoptions: {maxlength: 100},editrules: { required: true }},
-
-                   { label: 'Hl Single', name: 'hlSingle',fixed:true,width:100,editable: true, edittype:"text", editoptions: {maxlength: 100}},
-
-                   { label: 'Hl Container', name: 'hlContainer',fixed:true,width:100,editable: true, edittype:"text", editoptions: {maxlength: 100}},
-
-                   { label: 'Hl Case', name: 'hlCase',fixed:true,width:80,editable: true, edittype:"text", editoptions: {maxlength: 100}}
+                   { label: 'Date', name: 'date',fixed:true,width:100, editable: true, edittype:"text",editoptions: {maxlength: 100},editrules: { required: true } }
                  ], 
                viewrecords: true,
                height: 500,
@@ -99,14 +89,15 @@
                { edit: false, add: true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
                // options for the Add Dialog
                {},
-               {
-                   closeAfterAdd: true,
-                   recreateForm: true,
-                   errorTextFormat: function (data) {
-                       return 'Error: ' + data.responseText
-                   },
-                   url: "Products/Add"
-               });
+               //{
+               //    closeAfterAdd: true,
+               //    recreateForm: true,
+               //    errorTextFormat: function (data) {
+               //        return 'Error: ' + data.responseText
+               //    },
+               //    url: "Products/Add"
+               //}
+               );
 
        });
 
