--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -20,7 +20,7 @@
        </div>
            <div class="col-md-1 "></div>
        <div class="col-sm-2 text-sm-right">
-           <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="Sa Code" id="saCode" readonly/>
+           <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="SA Code:" id="saCode" readonly/>
        </div>
             <div class="col-sm-1"></div>
        <div class="col-sm-1 text-right">
