--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -21,7 +21,7 @@
         </div>
            <div class="col-lg-1 "></div>
         <div class="col-lg-2 text-sm-right">
-           <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="Sa Code" id="saCode" readonly/>
+           <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="SA Code:" id="saCode" readonly/>
         </div>
            <div class="col-lg-1"></div>
         <div class="col-lg-1 text-right">
