--- a/Views/SaStockReceived/Index.cshtml
+++ b/Views/SaStockReceived/Index.cshtml
@@ -10,42 +10,68 @@
  </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
     <div class="container-flow">
-        <div class="row">
-          <div class="col-lg-2">
-                <label style="font-size:8px;" for="date">Transaction Date:</label>
-                <input style="font-size:10px;" type="date" id="date" name="date">
+        <div class="mb-3 row">
+          <div class="col-lg-1 text-right">
+                <label style="font-size:8px;" class="col-form-label" for="date">Transaction Date:</label>
+          </div>
+            <div class="col-lg-1 p-0">
+                <input style="font-size:8px;" class="form-control" type="date" id="date" name="date">
           </div>          
         </div>
-        <div class="row">
-          <div class="col-lg-2 form-group">
-               <select style="font-size:10px;" class="form-control" id="truckingCompanyDropdown" name="truckingCompanyDropdown"></select>
+        <div class="mb-3 row">
+            <div class="col-lg-1 text-right">
+                <label style="font-size:7px;" class="col-form-label"  for="truckingCompanyDropdown">Trucking Company:</label>
           </div>
-          <div class="col-lg-2 form-group">
-                <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
+          <div class="col-lg-1 p-0">
+               <select style="font-size:8px;" class="form-control" id="truckingCompanyDropdown" name="truckingCompanyDropdown"></select>
           </div>
-        <div class="col-lg-2 form-group">
-                <select style="font-size:10px;" class="form-control" id="supplierDropdown" name="supplierDropdown"></select> 
+          <div class="col-lg-1 text-right">
+                <label style="font-size:8px;" class="col-form-label"  for="locationsDropdown">To Location:</label>
+          </div>
+          <div class="col-lg-1 p-0">
+                <select style="font-size:8px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
+          </div>
+         <div class="col-lg-1 text-right">
+                <label style="font-size:8px;" class="col-form-label"  for="supplierDropdown">Supplier:</label>
+          </div>
+        <div class="col-lg-1 p-0">
+                <select style="font-size:8px;" class="form-control" id="supplierDropdown" name="supplierDropdown"></select> 
          </div> 
-         <div class="col-lg-2">
-                   <input style="font-size:10px;" type="text" class="form-control" placeholder="Trucker/Probill Number:" aria-label="Trucker/Probill Number:" aria-describedby="basic-addon2" id="truckerProbillNumber"/>
+          <div class="col-lg-1 text-right">
+                <label style="font-size:8px;" class="col-form-label"  for="truckerProbillNumber">Probill #:</label>
+          </div>
+         <div class="col-lg-1 p-0">
+                   <input style="font-size:8px;" type="text" class="form-control"  aria-describedby="basic-addon2" id="truckerProbillNumber"/>
             </div>
         </div>
-        <div class="row">
-             <div class="col-lg-2">
-                <input style="font-size:10px;" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
-             </div>
-              <div class="col-lg-2 ">
-              <input style="font-size:10px;" type="text" class="form-control" placeholder="Seal No:" aria-label="Seal No:" aria-describedby="basic-addon2" id="sealNo"/>
-         </div>
-         <div class="col-lg-4">
-                 <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
-             </div>
-                <div class="col-lg-1"></div>
-             <div class="col-lg-2">
-                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
+        <div class="mb-3 row">
+            <div class="col-lg-1 text-right">
+                <label style="font-size:8px;" class="col-form-label"  for="purchaseOrder">PO:</label>
+            </div>
+             <div class="col-lg-1 p-0">
+                <input style="font-size:8px;" type="text" class="form-control"  aria-describedby="basic-addon2" id="purchaseOrder"/>
              </div>
              <div class="col-lg-1 text-right">
-                  <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
+                <label style="font-size:8px;" class="col-form-label"  for="sealNo">Seal #:</label>
+             </div>
+              <div class="col-lg-1 p-0">
+              <input style="font-size:8px;" type="text" class="form-control"  aria-describedby="basic-addon2" id="sealNo"/>
+             </div>
+             <div class="col-lg-1 text-right">
+                <label style="font-size:8px;" class="col-form-label"  for="comments">Notes:</label>
+             </div>
+             <div class="col-lg-3 p-0">
+                 <input style="font-size:8px;" type="text" class="form-control"  aria-describedby="basic-addon2" id="comments"/>
+             </div>
+             <div class="col-lg-1"></div>
+             <div class="col-lg-1 text-right"> 
+                 <label for="saCode"  class="col-form-label" style="font-size:8px;">SA Code:</label>
+             </div>
+             <div class="col-lg-1 p-0">
+                   <input type="text" style="font-size:8px; border-radius: 0 !important" class="form-control" id="saCode" readonly/>
+             </div>
+             <div class="col-lg-1 text-right">
+                  <button class="btn btn-outline-secondary" style="font-size:8px;" id="save" type="button">Save</button>  
              </div> 
             </div>
     </div>
@@ -116,7 +142,7 @@
                    }},
                    //{ label: 'Supplier',name: 'supplierName',width:170,fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:100,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
-                   { label: 'Updated Stock',name: 'amount',fixed:true, width:100,editable: true, edittype:"text"},
+                   { label: 'Adj Amount (+/-)',name: 'amount',fixed:true, width:80,editable: true, edittype:"text"},
                    { label: 'Notes',name: 'comments',fixed:true,width:650, editable: true, edittype:"text"}
 
                  ], 
@@ -167,7 +193,7 @@ $(document).ready(function () {
            url: "SaStockReceived/CreateLocationsList",  
            data: "{}",  
            success: function (data) {  
-               var s = '<option value="-1">Select a Location</option>';  
+               var s = '';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
@@ -181,7 +207,7 @@ $(document).ready(function () {
            url: "SaStockReceived/CreateTruckingList",  
            data: "{}",  
            success: function (data) {  
-               var s = '<option value="-1">Select a Trcuking Company</option>';  
+               var s = '';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
@@ -196,7 +222,7 @@ $(document).ready(function () {
            url: "SaStockReceived/CreateList",  
            data: "{}",  
            success: function (data) {  
-               var s = '<option value="-1">Select a Supplier</option>';  
+               var s = '';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
