--- a/Views/CustomerOrder/Index.cshtml
+++ b/Views/CustomerOrder/Index.cshtml
@@ -11,58 +11,52 @@
 <fieldset class="scheduler-border">
   <div class="container-flow">
 
-     <div class="row p-1">
+     <div class="row">
 
-             <div class="col-lg-3">
+             <div class="col-lg-2">
                <label for="dateOrdered"  style="font-size:8px;">Date Ordered:</label>
+               <div class="pull-right">
                <input type="date" value="" style="font-size:10px;" id='dateOrdered' name="dateOrdered" />
+               </div>
              </div>
-
-             <div class="col-lg-3 form-group">
-                <select style="font-size:10px;" class="form-control" id="customer" name="customer"></select>
-             </div>
-            
-             <div class="col-lg-3">
-                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Order Number:" id="orderNumber" name="orderNmber"/>
-             </div>
-
-     </div>
-
-     <div class="row p-1">
-
-            <div class="col-lg-3">
+             <div class="col-lg-2">
                <label for="deliveryReqDate"  style="font-size:8px;">Delivery Req Date:</label>
+               <div class="pull-right">
                <input type="date" value=""  style="font-size:10px;" id='deliveryReqDate' name="deliveryReqDate" />
+               </div>
             </div>
-            
-            <div class="col-lg-3 form-group">
-               <select style="font-size:10px;" class="form-control" id="carrier" name="carrier"></select>
-            </div>
-
-             <div class="col-lg-3">
-                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Special Instructions:" id="specialInstructions" name="specialInstructions"/>
-             </div>
-     </div>
-          <div class="row p-1">
-
-              <div class="col-lg-3 form-group">  
+            <div class="col-lg-2 form-group">  
                  <select style="font-size:10px;" class="form-control" id="customerOrderStatus" name="customerOrderStatus"></select>
              </div>
 
-             <div class="col-lg-3">
+             <div class="col-lg-2 form-group">
+                <select style="font-size:10px;" class="form-control" id="customer" name="customer"></select>
+             </div>
+
+     </div>
+
+     <div class="row">
+            
+             <div class="col-lg-2 form-group">
+                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Special Instructions:" id="specialInstructions" name="specialInstructions"/>
+             </div>
+             
+             <div class="col-lg-2">
+                <input type="text"  style="font-size:10px;" class="form-control" placeholder="Order Number:" id="orderNumber" name="orderNmber"/>
+             </div>
+             <div class="col-lg-2">
                 <input type="text"  style="font-size:10px;" class="form-control" placeholder="Driver:" id="driver" name="driver"/>
              </div>
             
-             <div class="col-lg-3">
+             <div class="col-lg-2">
                 <input type="text"  style="font-size:10px;" class="form-control" placeholder="Ds Slip Number:" id="dsSlipNumber" name="dsSlipNumber"/>
              </div>
 
-             <div class="col-lg-2"></div>
+             <div class="col-lg-3"></div>
 
              <div class="col-lg-1 text-right">
                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
              </div>   
-
      </div>
 </div>
 </fieldset>
