--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -9,32 +9,44 @@
     <h4 class="display-5">Internal Transfer</h4>
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
-<div class="container-flow">
-    <div class="row">
-        <div class="col-lg-2 form-group">
+ <div class="mb-3 row">
+        <div class="col-lg-1 text-right">
             <label style="font-size:8px;" for="date">Transaction Date:</label>
-            <input style="font-size:10px;" type="date" id="date" name="date">
+            </div>
+            <div class="col-lg-1 p-0">
+                <input style="font-size:8px;" type="date" class="form-control" id="date" name="date"/>
+            </div>
+        <div class="col-lg-1 text-right">
+            <label style="font-size:8px;"class="col-form-label" for="toLocationsDropdown">To Location:</label>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 form-group">
-            <select style="font-size:10px;" class="form-control" id="toLocationsDropdown" name="toLocationsDropdown"></select> 
+        <div class="col-lg-1 p-0">
+            <select style="font-size:8px;" class="form-control" id="toLocationsDropdown" name="toLocationsDropdown"></select> 
         </div>
-        <div class="col-lg-2 form-group">
-             <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select>   
+     </div>
+    <div class="mb-3 row">
+        <div class="col-lg-1 text-right">
+            <label style="font-size:8px;"class="col-form-label" for="fromLocationsDropdown">From Location:</label>
         </div>
-        <div class="col-lg-4 form-group">
-            <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
+        <div class="col-lg-1 p-0">
+             <select style="font-size:8px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select>   
         </div>
-        <div class="col-lg-1"></div> 
-        <div class="col-lg-2">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
+        <div class="col-lg-1 text-right"> 
+          <label for="comments"  class="col-form-label" style="font-size:8px;">Notes:</label>
+        </div>
+        <div class="col-lg-4 p-0">
+          <input type="text"  style="font-size:8px;" class="form-control" id="comments" name="comments"/>
+        </div>
+        <div class="col-lg-2"></div>
+        <div class="col-lg-1 text-right"> 
+          <label for="saCode"  class="col-form-label" style="font-size:8px;">SA Code:</label>
+        </div>
+        <div class="col-lg-1 p-0">
+          <input type="text" style="font-size:8px; border-radius: 0 !important"  class="form-control" id="saCode" readonly/>
         </div>
         <div class="col-lg-1 text-right">
-            <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
+            <button class="btn btn-outline-secondary" style="font-size:8px;" id="save" type="button">Save</button>  
         </div>
     </div>
-</div>
 </fieldset>
 
 
@@ -102,7 +114,7 @@
                    { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                  //  { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
-                   { label: 'Quantity',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
+                   { label: 'Adj Amount (+/-)',name: 'amount',fixed:true,width:80,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
                    { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
 
@@ -158,10 +170,10 @@
         $(document).ready(function () {  
            $.ajax({  
                type: "GET",  
-               url: "SaInternalTransfer/CreateLocationList",  
+               url: "SaInternalTransfer/CreateFromLocationList",  
                data: "{}",  
                success: function (data) {  
-                   var s = '<option value="-1">Select a From Location</option>';  
+                   var s = '';  
                    for (var i = 0; i < data.length; i++) {  
                        s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                    }  
@@ -172,10 +184,10 @@
        $(document).ready(function () {  
            $.ajax({  
                type: "GET",  
-               url: "SaInternalTransfer/CreateLocationList",  
+               url: "SaInternalTransfer/CreateToLocationList",  
                data: "{}",  
                success: function (data) {  
-                   var s = '<option value="-1">Select a To Location</option>';  
+                   var s = '';  
                    for (var i = 0; i < data.length; i++) {  
                        s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                    }  
