--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -10,34 +10,54 @@
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
     <div class="container-flow">
-        <div class="row">
-            <div class="col-lg-2 form-group">
-                <label style="font-size:8px;" for="date">Transaction Date:</label>
-                <input style="font-size:10px;" type="date" id="date" name="date">
+        <div class="mb-3 row">
+            <div class="col-lg-1">
+                 <label style="font-size:8px;" for="date">Transaction Date:</label>
+            </div> 
+            <div class="col-lg-1 p-0">
+                 <input style="font-size:8px;" class="form-control" type="date" id="date" name="date">
             </div>
-            <div class="col-lg-2 form-group">
-                 <select style="font-size:10px;" class="form-control" id="destDropdown" name="destDropdown"></select> 
+            <div class="col-lg-1 text-right">
+                  <label style="font-size:8px;"class="col-form-label" for="destDropdown">Destination:</label>
+             </div>
+            <div class="col-lg-1 p-0">
+                  <select style="font-size:8px;" class="form-control" id="destDropdown" name="destDropdown"></select> 
             </div>
-            <div class="col-lg-2 form-group">
-                 <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select> 
+            <div class="col-lg-1 text-right">
+                  <label style="font-size:8px;"class="col-form-label" for="fromLocationsDropdown">From Location:</label>
+             </div>
+            <div class="col-lg-1 p-0">
+                 <select style="font-size:8px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select> 
             </div>          
         </div>
-        <div class="row">
-            <div class="col-lg-2 form-group">
-                 <select style="font-size:10px;" class="form-control" id="truckingComp" name="truckingComp"></select>
+        <div class="mb-3 row">
+            <div class="col-lg-1 text-right">
+                  <label style="font-size:7px;"class="col-form-label" for="truckingComp">Trucking Company:</label>
+             </div>
+            <div class="col-lg-1 p-0">
+                 <select style="font-size:8px;" class="form-control" id="truckingComp" name="truckingComp"></select>
             </div> 
-            <div class="col-lg-2 form-group">
-                 <input style="font-size:10px;" type="text" class="form-control" placeholder="ProbillNo:" aria-label="Probill Number:" aria-describedby="basic-addon2" id="probill"/>
+            <div class="col-lg-1 text-right">
+                  <label style="font-size:8px;"class="col-form-label" for="probill">Probill:</label>
+             </div>
+            <div class="col-lg-1 p-0">
+                 <input style="font-size:8px;" type="text" class="form-control" aria-describedby="basic-addon2" id="probill"/>
             </div>
-            <div class="col-lg-4">
-                <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
+            <div class="col-lg-1 text-right">
+                  <label style="font-size:8px;"class="col-form-label" for="comments">Notes:</label>
+             </div>
+            <div class="col-lg-3 p-0">
+                <input style="font-size:8px;" type="text" class="form-control" aria-describedby="basic-addon2" id="comments"/>
             </div>
             <div class="col-lg-1"></div>
-               <div class="col-lg-2">
-                <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
-               </div>
+            <div class="col-lg-1 text-right"> 
+                <label for="saCode"  class="col-form-label" style="font-size:8px;">SA Code:</label>
+            </div>
+            <div class="col-lg-1 p-0">
+                <input type="text" style="font-size:8px; border-radius: 0 !important"class="form-control" id="saCode" readonly/>
+            </div>
             <div class="col-lg-1 text-right">
-                <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
+                <button class="btn btn-outline-secondary" style="font-size:8px;" id="save" type="button">Save</button>  
             </div>
         </div>
     </div>
@@ -107,8 +127,7 @@
                    { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                  //  { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
-                   { label: 'Qty Available',name: 'amount',fixed:true,width:95,align:"right",editable: false, edittype:"text"},
-                   { label: 'Quantity',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
+                   { label: 'Adj Amount (+/-)',name: 'amount',fixed:true,width:80,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
                  //  { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
 
@@ -166,7 +185,7 @@
            url: "saOutbound/CreateLocationList",  
            data: "{}",  
            success: function (data) {  
-               var s = '<option value="-1">Select a Location</option>';  
+               var s = '';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
@@ -180,7 +199,7 @@
            url: "saOutbound/CreateTruckingList",  
            data: "{}",  
            success: function (data) {  
-               var s = '<option value="-1">Select a Trucking Company</option>';  
+               var s = '';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
@@ -194,7 +213,7 @@
            url: "saOutbound/CreateDestinationList",  
            data: "{}",  
            success: function (data) {  
-               var s = '<option value="-1">Select a Destination</option>';  
+               var s = '';  
                for (var i = 0; i < data.length; i++) {  
                    s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
                }  
